<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smoke-B-Gone</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_info">Informatie</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_splash">Smoke-B-Gone</string>
    <string name="title_activity_info_">Informatie</string>
    <string name="title_activity_welcome">Welkom!</string>
    <string name="info_kwf">KWF Kankerbestrijding is een Nederlandse stichting die zich inzet voor bestrijding van kanker door middel van wetenschappelijk onderzoek, voorlichting, patiëntenondersteuning en fondsenwerving. Dat gebeurt samen met vrijwilligers, donateurs, patiënten, artsen en onderzoekers. De officiële naam van de stichting is Koningin Wilhelmina Fonds voor de Nederlandse Kankerbestrijding. Sinds november 2003 werkt de stichting onder de naam KWF Kankerbestrijding.</string>
    <string name="donate_button">Doneer Hier</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="title_activity_health">Gezondheid</string>
    <string name="title_activity_chart">Grafiek</string>
    <string name="title_activity_xychart_builder">Grafiek</string>
    <string name="title_activity_money">Besparingen</string>
    <string name="SplashTitleTV">Smoke-B-Gone</string>
    <string name="Home">Hoofdscherm</string>
    
    
    
    
    <!-- Welcome Activity Strings -->
    <string name="waWelkom">Welkom bij SmokeBeGone!</string>
    <string name="waInleiding">Deze app moet enkele dingen weten voor je deze kan gebruiken:</string>
    <string name="waCPP">Aantal sigaretten per pakje:</string>
    <string name="waPPP">Prijs per pakje:</string>
    <string name="waCPD">Sigaretten per dag wat je normaal rookte:</string>
    
   	<!-- General strings -->
   	
   	<string name="gSave">Opslaan</string>
   	<string name="gDay">Dag</string>
   	<string name="gDayMultiple">Dagen</string>
   	<string name="gHour">Uur</string>
   	<string name="gMinute">Minuut</string>
   	<string name="gMinuteMultiple">Minuten</string>
   	<string name="gSecond">Seconde</string>
   	<string name="gSecondMultiple">Seconden</string>
   	<string name="gZero">0</string>
   	
   	<!-- Main Activity strings -->
   	
   	<string name="maButtonSmoked">Ik heb toch gerookt!</string>
   	<string name="maSmokesComplementation">niet gerookt!</string>
   	<string name="maSavingsTVStandard">Besparing</string>
   	
   	<!-- Image Descriptions -->
   	<string name="gBackgroundImage">Achtergrond</string>
   	
   	
   	<string name="info_app">Deze applicatie is gemaakt door Good-Hearted. De applicatie is bedoelt om gemotiveerde mensen net dat ene zetje te geven om te stoppen met roken. De applicatie is gemaakt in opdracht van Hogeschool Rotterdam. De applicatie is gemaakt met het KWF in ons achterhoofd. Dit heeft ervoor gezorgt dat we onder andere een doneer knop in onze applicatie hebben gebouwd die ervoor zorgt dat u op de doneer-pagina van het KWF terecht komt. Wij hopen dat u onze applicatie nuttig vind en wensen u veel geluk met het stoppen met roken!</string>
   	<string name="hb1">Je bloeddruk en de snelheid van je hart zijn weer normaal:</string>
   	<string name="hb2">Nicotine in je bloed gedaald met 93.75%:</string>
   	<string name="hb3">Zuurstof en CO2 in je bloed is weer normaal:</string>
   	<string name="hb4">Behoefte naar een sigaret bereikt zijn top en zal alleen nog maar dalen:</string>
   	<string name="hb5">Reuk en smaak is weer normaal. Zenuwen groeien terug:</string>
   	<string name="hb6">100% nicotine vrij:</string>
   	<string name="hb7">Verslaving is zo goed als weg:</string>
   	<string name="hb8">Hersenen zijn weer zo goed als bij non-rokers:</string>
   	<string name="hb9">Je lichaam is weer beter, conditie is verbeterd en hoesten is weg:</string>
   	<string name="setprijspp">Prijs per pakje?</string>
   	<string name="setaantaldag">Hoeveel sigaretten rookte je op een dag?</string>
   	<string name="setaantalpakje">Hoeveel sigaretten zitten er in een pakje?</string>
   	<string name="setopslaan">Opslaan</string>
   	<string name="health_tv">Textview</string>

</resources>