<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bmHome"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Home" />

    <Button
        android:id="@+id/bmHealth"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_health" />

    <Button
        android:id="@+id/bmInfo"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_info" />

    
    <Button
        android:id="@+id/bmChart"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_xychart_builder" />
    <Button
        android:id="@+id/bmMoney"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_money" />
    
    <Button
        android:id="@+id/bmSettings"
        style="@style/MenuTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_settings" />

</LinearLayout>