<com.goodhearted.smokebegone.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bla"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Here is any view that will represent your side menu. Don't forget to provide width! -->

    <include
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/slidemenulayout" />

    <!-- And here is your main layout -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_twocolors"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SettingsActivity" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#99FFFFFF"
            android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvWCPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etWPricePack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/waCPP" />

        <TextView
            android:id="@+id/tvWCPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etWNumPerPack"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/waCPD" >
        </TextView>

        <Button
            android:id="@+id/btWSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etWSPD"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/gSave" />

        <TextView
            android:id="@+id/tvWPPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/waPPP" />

        <EditText
            android:id="@+id/etWPricePack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWPPP"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etWNumPerPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWCPP"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etWSPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etWNumPerPack"
            android:layout_below="@+id/tvWCPD"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" />

        </RelativeLayout>
    </RelativeLayout>

</com.goodhearted.smokebegone.SlideHolder>